<resources>
    <string name="app_name">MovieApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="storyline_content">After the devastating events of Avengers: Infinity War,\nthe universe is in ruins. With the help of remaining allies,\nthe Avengers assemble once more in order to reverse\nThanos\' actions and restore balance to the universe.</string>
    
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    
    <string name="robertDJ">Robert Downey Jr.</string>
    <string name="chrisE">Chris Evans</string>
    <string name="MarkR">Mark\nRuffalo</string>
    <string name="chrisH">Chris Hemsworth</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="_13">13+</string>
    <string name="back">Back</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
</resources>