<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundContainer"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <ImageView
            android:id="@+id/main_background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <View
            android:id="@+id/logo_gradient_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/main_background_image"
            app:layout_constraintEnd_toEndOf="@id/main_background_image"
            app:layout_constraintStart_toStartOf="@id/main_background_image"
            app:layout_constraintTop_toTopOf="@id/main_background_image" />


        <Button
            android:id="@+id/toolbar"
            style="@style/ToolbarTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age_cenz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rectangle"
            android:elevation="10sp"
            android:text="@string/_13"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_name_film"
            app:layout_constraintStart_toStartOf="@id/text_name_film" />


        <TextView
            android:id="@+id/text_name_film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/avengers_end_game"
            android:textColor="#FFF"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/main_background_image"
            app:layout_constraintTop_toBottomOf="@id/main_background_image" />

        <TextView
            android:id="@+id/under_name_film"
            style="@style/under_name_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/action_adventure_fantasy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name_film" />

        <ImageView
            android:id="@+id/ratingbar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/ratingbar2"
            app:layout_constraintStart_toStartOf="@id/under_name_film"
            app:layout_constraintTop_toBottomOf="@+id/under_name_film" />

        <ImageView
            android:id="@+id/ratingbar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/ratingbar3"
            app:layout_constraintStart_toEndOf="@+id/ratingbar1"
            app:layout_constraintTop_toBottomOf="@+id/under_name_film" />

        <ImageView
            android:id="@+id/ratingbar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/ratingbar4"
            app:layout_constraintStart_toEndOf="@+id/ratingbar2"
            app:layout_constraintTop_toBottomOf="@+id/under_name_film" />

        <ImageView
            android:id="@+id/ratingbar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintEnd_toStartOf="@+id/ratingbar5"
            app:layout_constraintStart_toEndOf="@+id/ratingbar3"
            app:layout_constraintTop_toBottomOf="@+id/under_name_film" />

        <ImageView
            android:id="@+id/ratingbar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon_empty"
            app:layout_constraintStart_toEndOf="@+id/ratingbar4"
            app:layout_constraintTop_toBottomOf="@+id/under_name_film" />

        <TextView
            android:id="@+id/value_review"
            style="@style/Review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:text="@string/_125_reviews"
            app:layout_constraintLeft_toRightOf="@id/ratingbar5"
            app:layout_constraintTop_toBottomOf="@+id/under_name_film" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/storyline"
            android:textColor="#ECECEC"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/under_name_film"
            app:layout_constraintTop_toBottomOf="@id/value_review" />

        <TextView
            android:id="@+id/text_storyline"
            style="@style/style_text_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/storyline_content"
            app:layout_constraintStart_toStartOf="@id/under_name_film"
            app:layout_constraintEnd_toEndOf="@id/text_name_film"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            style="@style/cast"
            android:layout_width="243dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="116dp"
            android:text="@string/cast"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@id/under_name_film"
            app:layout_constraintTop_toBottomOf="@id/text_storyline" />

        <ImageView
            android:id="@+id/photo3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/Movie"
            app:layout_constraintRight_toLeftOf="@id/photo1"
            app:layout_constraintStart_toStartOf="@id/under_name_film"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/photo1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/Movie1"
            app:layout_constraintLeft_toRightOf="@id/photo3"
            app:layout_constraintRight_toLeftOf="@id/photo2"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/photo2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/Movie2"
            app:layout_constraintLeft_toRightOf="@id/photo1"
            app:layout_constraintRight_toLeftOf="@id/photo4"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/photo4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/Movie3"
            app:layout_constraintLeft_toRightOf="@id/photo2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="2sp"
            android:src="@drawable/Movie"
            android:text="@string/robertDJ"
            android:textAppearance="@style/robert_down"
            app:layout_constraintEnd_toEndOf="@id/photo3"
            app:layout_constraintStart_toStartOf="@id/photo3"
            app:layout_constraintTop_toBottomOf="@id/photo3" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="2sp"
            android:src="@drawable/Movie1"
            android:text="@string/chrisE"
            android:textAppearance="@style/chris_evans"
            app:layout_constraintEnd_toEndOf="@id/photo1"
            app:layout_constraintStart_toStartOf="@id/photo1"
            app:layout_constraintTop_toBottomOf="@id/photo1" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="2sp"
            android:src="@drawable/Movie2"
            android:text="@string/MarkR"
            android:textAppearance="@style/mark_ruffal"
            app:layout_constraintEnd_toEndOf="@id/photo2"
            app:layout_constraintStart_toStartOf="@id/photo2"
            app:layout_constraintTop_toBottomOf="@id/photo2" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="2sp"
            android:src="@drawable/Movie3"
            android:text="@string/chrisH"
            android:textAppearance="@style/chris_hemsw"
            app:layout_constraintEnd_toEndOf="@id/photo4"
            app:layout_constraintStart_toStartOf="@id/photo4"
            app:layout_constraintTop_toBottomOf="@id/photo4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>